1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Archiver.m (defaultPath): Renamed from defaultFileName.
	Return const char * instead of id.

	* Archiver.h (Archiver): Replace archiveFileNameString with path,
	a const char * instead of id.

	* Archiver.[hm]: Replace load:fromFileNamed: with load:path:.
	Replace ensure:archiveFileName: with ensure:path:.
	Replace setArchiveFileName: with setPath:.

1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ObjectLoader.[hm] ([ObjectLoader +load:fromAppConfigFileNamed:]): 
	New method.

	* simtools.h (ObjectLoader): Add it.

1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ObjectLoader.[hm] ([ObjectLoader +load:fromAppConfigFileNamed:]),
	simtools.h (ObjectLoader): Add it.

	* UName.[hm], simtools.m: Rename NoBaseNameForUName to UNameError.

	* Archiver.m: Include objectbase.h instead of objectbase/Arguments.h.

1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Archiver.m: Include misc.h instead of unistd.h.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.m: Include InFile.h, ObjectLoader.h, ObjectSaver.h,
	OutFile.h, and UName.h to get warning and error symbols.
	(initSwarmArguments): Remove simtoolsgui symbols (ControlState*).
	Define error and warning symbols.

	* UName.[hm]: Declare NoBaseNameForUName.

	* UName.m ([UName -createEnd]): Use it with raiseEvent (instead of
	stderr).

	* OutFile.h: Declare CannotOpenOutFile.

	* OutFile.m ([OutFile +create:withName:]): Use it with raiseEvent
	(instead of stderr).

	* ObjectSaver.[hm]: Declare CouldNotSave error symbol.

	* ObjectSaver.m ([ObjectSaver +_crash_:], [ObjectSaver -_crash_:]): 
	Use it with raiseEvent (instead of stderr).

	* ObjectLoader.[hm]: Declare CouldNotInitializeObjectLoader error
	symbol.

	* ObjectLoader.m ([ObjectLoader +_crash_:],
	[ObjectLoader -_crash_:]): Use it with raiseEvent (instead of stderr).

	* InFile.[hm]: Declare CannotOpenInFile warning symbol.
